fixed typo in anton caceres' name and fixed ondrej sika's website

--- a/templates/index.html
+++ b/templates/index.html
@@ -672,10 +672,10 @@
             <div class="row"><!-- row 11 start-->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
-                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/caceras.jpg') }}"
-                             alt="Anton Caceras"/>
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/caceres.jpg') }}"
+                             alt="Anton Caceres"/>
                         <div class="ts-speaker-info">
-                            <h3 class="ts-speaker-name">Anton Caceras</h3>
+                            <h3 class="ts-speaker-name">Anton Caceres</h3>
                             <p class="ts-speaker-designation">{{ _('Software developer and PyCon organizer') }}</p>
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
