--- a/templates/speakers.html
+++ b/templates/speakers.html
@@ -1352,13 +1352,13 @@
                 <div class="ts-speaker-list clearfix">
                     <div class="col-xs-12 col-md-4">
                         <div class="ts-speaker-image">
-                            <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/caceras.jpg') }}" />
+                            <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/caceres.jpg') }}" />
                         </div><!--Image end -->
                     </div><!-- Col end -->
 
                     <div class="col-xs-12 col-md-8">
                         <div class="ts-speaker-info">
-                            <h3 class="ts-speaker-name dark">Anton Caceras</h3>
+                            <h3 class="ts-speaker-name dark">Anton Caceres</h3>
                             <p class="ts-speaker-designation">{{ _('Software developer and PyCon organizer') }}</p>
                             <ul class="ts-speaker-social-links">
                                 <li><a href="https://caceres.me/"><i class="fa fa-globe"></i></a></li>
@@ -1446,7 +1446,7 @@
                             <h3 class="ts-speaker-name dark">Ondrej Sika</h3>
                             <p class="ts-speaker-designation">{{ _('Python & DevOps Engineer form Prague') }}</p>
                             <ul class="ts-speaker-social-links">
-                                <li><a href="https://ondrej-sika.com/"><i class="fa fa-globe"></i></a></li>
+                                <li><a href="https://ondrejsika.com/"><i class="fa fa-globe"></i></a></li>
 {#                                <li><a href="https://github.io/"><i class="fa fa-github"></i></a></li>#}
                                 <li><a href="https://twitter.com/ondrejsika"><i class="fa fa-twitter"></i></a></li>
                                 <li><a href="https://www.linkedin.com/in/ondrejsika/"><i class="fa fa-linkedin"></i></a></li>
