Rephrase GitHub contribution sentence in the footer

--- a/templates/body.html
+++ b/templates/body.html
@@ -220,7 +220,7 @@
              {{ _('PyCon SK is organized by volunteers from %(spy)s.',
                   spy = '<a href="https://spy.python.sk" target="_blank" class="external">%s</a>' % _('SPy o.z.')) }} {{ _('Our <a href="%(url)s">Privacy Policy</a>.', url=url_for('privacy_policy', lang_code=lang_code)) }}
             <br/><span class="oi oi-bug"></span>
-             {{ _('Found a bug? Missing some information? This is community managed website, contribute at our %(github)s.',
+             {{ _('Found a bug? Missing some information? This is a community managed website, so feel free to contribute to our %(github)s repository.',
                   github = '<a href="https://github.com/pyconsk/2019.pycon.sk" target="_blank" class="external">GitHub</a>') }}
           </p>
           {% endautoescape %}
