--- a/templates/faq.html
+++ b/templates/faq.html
@@ -25,7 +25,7 @@
               <div class="panel-heading">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" data-parent="#accordionA, #accordionB" href="#collapseOne" aria-expanded="false" class="collapsed">
-                    {{ _('Where will the conference happen?') }}</a>
+                    {{ _('Where will the conference take place?') }}</a>
                 </h4>
               </div>
               <div id="collapseOne" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
@@ -44,16 +44,16 @@
               <div class="panel-heading">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" class="collapsed" data-parent="#accordionA, #accordionB" href="#collapseTwo" aria-expanded="false">
-                    {{ _('What languages are spoken?') }}</a>
+                    {{ _('What are the conference languages?') }}</a>
                 </h4>
               </div>
               <div id="collapseTwo" class="panel-collapse collapse" aria-expanded="false">
                 <div class="panel-body">
                   <p class="text-justify">
-                    {{ _('Talks will be mostly in English and Slovak language. Possibly we will have a few talks in Czech language. If you do not speak Slovak or Czech do not worry, we have two tracks so there will be always talk in English.') }}
+                    {{ _('Talks will be mostly in English or Slovak. There might be a few talks in Czech. If you don\'t speak Slovak or Czech, don\'t worry, at least one of the tracks will always be in English.') }}
                   </p>
                   <p class="text-justify">
-                    {{ _('Volunteers do speak English. In Slovakia there is mandatory second language in school so most of the attendees will speak English or other language (at least a little bit).') }}
+                    {{ _('Volunteers do speak English. In Slovakia, English is a compulsory foreign language in schools, so most of the attendees should speak English.') }}
                   </p>
                 </div>
               </div>
@@ -111,13 +111,13 @@
               <div class="panel-heading">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" class="collapsed" data-parent="#accordionA, #accordionB" href="#collapseC" aria-expanded="false">
-                    {{ _('What is included in the ticket?') }}</a>
+                    {{ _('What is included in the ticket price?') }}</a>
                 </h4>
               </div>
               <div id="collapseC" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
                 <div class="panel-body">
                   <p class="text-justify">
-                    {{ _('We made a list of things what you can expect at the conference on <a href="%(url)s">the tickets page</a>.', url=url_for('tickets', lang_code=lang_code)) }}
+                    {{ _('We made a list of things you can expect at the conference on <a href="%(url)s">the tickets page</a>.', url=url_for('tickets', lang_code=lang_code)) }}
                   </p>
                 </div>
               </div>
@@ -132,7 +132,7 @@
               <div id="collapseD" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
                 <div class="panel-body">
                   <p class="text-justify">
-                    {{ _('If you would like to buy more than 15 tickets please contact us by email at info@pycon.sk.') }}
+                    {{ _('If you would like to buy more than 15 tickets, please contact us by email at info@pycon.sk.') }}
                   </p>
                 </div>
               </div>
@@ -141,13 +141,13 @@
               <div class="panel-heading">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" class="collapsed" data-parent="#accordionA, #accordionB" href="#collapseE" aria-expanded="false">
-                    {{ _('Is there any another possibility to get to PyCon?') }}</a>
+                    {{ _('Is there any another possibility to attend PyCon?') }}</a>
                 </h4>
               </div>
               <div id="collapseE" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
                 <div class="panel-body">
                   <p class="text-justify">
-                    {{ _('Yes <a href="%(url)s">submit a talk</a>, and if your talk is selected you will receive a speakers ticket for free.', url=url_for('cfp', lang_code=lang_code)) }}
+                    {{ _('Yes, you can <a href="%(url)s">submit a talk</a>, and if your talk is selected, you will receive a speakers ticket for free.', url=url_for('cfp', lang_code=lang_code)) }}
                   </p>
                   <p class="text-justify">
                     {{ _('If you are less than 15 years old and come accompanied by a parent, you can just purchase one ticket only for the parent, but you have to inform us in advance to issue an another ticket for the child.') }}
@@ -175,16 +175,16 @@
               <div class="panel-heading">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" class="collapsed" data-parent="#accordionA, #accordionB" href="#collapseG" aria-expanded="false">
-                    {{ _('Do you have social event in the evening?') }}</a>
+                    {{ _('Do you have a social event in the evening?') }}</a>
                 </h4>
               </div>
               <div id="collapseG" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
                 <div class="panel-body">
                   <p class="text-justify">
-                    {{ _('On Firday there will be an unofficial party. We will meet in a pub and have fun, no need for special ticket.') }}
+                    {{ _('On Friday, there will be an unofficial party in a pub. There is no need to purchase a special ticket.') }}
                   </p>
                   <p class="text-justify">
-                    {{ _('On Saturday we\'ll have an official conference dinner! There is a special ticket for this event.') }}
+                    {{ _('On Saturday, we\'ll have an official conference dinner! You can purchase a ticket for this event.') }}
                   </p>
                 </div>
               </div>
@@ -200,7 +200,7 @@
               <div id="collapseH" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
                 <div class="panel-body">
                   <p class="text-justify">
-                    {{ _('YES. You don\'t have to purchase a ticket for the FRIDAY unofficial party. In the pub everybody pays for themself.') }}
+                    {{ _('YES. You don\'t have to purchase a ticket for the FRIDAY unofficial party. We won\’t cover any of your expenses.') }}
                   </p>
                 </div>
               </div>
