--- a/templates/edusummit.html
+++ b/templates/edusummit.html
@@ -256,7 +256,7 @@
 						</span>
                         <h3 class="feature-title">{{ _('Young Coders\' day') }}</h3>
                         <div class="feature-box-content">
-                            <p>{{ _('On saturday, we will host a Young Coders\' day, consisting of programming workshops for children.') }}</p>
+                            <p>{{ _('On Saturday, we will host a Young Coders\' day, consisting of programming workshops for children.') }}</p>
                         </div>
                     </div><!-- Feature box end -->
                 </div><!-- Col 2 end -->
@@ -471,7 +471,7 @@
                     <div class="sponsor-details">
                         <div class="sponsor-info">
                             <h4 class="sponsor-name"><i class="fa fa-ticket" aria-hidden="true"></i>
-                                {{ _('What kind of ticked should I buy?') }}
+                                {{ _('What kind of ticket should I buy?') }}
                             </h4>
                             <p class="text-justify">
                                 {{ _('All available tickets apply for the whole PyCon SK conference, including the EduSummit section. All of the talks and workshops take place at the same venue and you can decide which talks and workshops you want to attend.') }}
