--- a/templates/cfv.html
+++ b/templates/cfv.html
@@ -29,12 +29,12 @@
           <p class="text-justify">
             {{ _('PyCon SK is organized by the Python community and for the Python community.') }}
             {{ _('All of our staff members are volunteers. We are looking for new members to join the team of organizers.') }}
-            {{ _('This is great opportunity to meet people, make new friends and get the opportunity to learn new things.') }}
+            {{ _('This is a great opportunity to meet people, make new friends and learn new things.') }}
           </p>
 
           <p class="text-justify">
             {{ _('As a volunteer you get a free ticket to the conference as a thank you for making the change in our society.') }}
-            {{ _('If you spend more than 40 hours during the year as a volunteer you can give 3%% to any registered non-profit in your tax return.') }}
+            {{ _('If you are a Slovak citizen and you work at least 40 hours a year as a volunteer, you can donate 3%% of your tax liability to any registered non-profit.') }}
           </p>
 
           <form action="https://docs.google.com/forms/d/e/1FAIpQLSf4bOJdE201B_VyhHrxP_z_Fq1IGLaqxnv7KZVAVQ-C30DFUA/formResponse"
@@ -79,10 +79,10 @@
 
             <!-- Field type: "short" id: "712730357" -->
             <fieldset>
-              <legend for="712730357">{{ _('What is your time estimate you can spend as volunteer?') }}
+              <legend for="712730357">{{ _('How much time can you spend volunteering?') }}
                 <span class="required">*</span></legend>
               <div class="form-group">
-                <p class="help-block">{{ _('We need just rought estimate, for example: our daily, two hours a week...') }}</p>
+                <p class="help-block">{{ _('We need just a rough estimate, for example: an hour a day, two hours a week...') }}</p>
                 <input id="332887087" type="text" name="entry.332887087" class="form-control" required>
               </div>
             </fieldset>
@@ -92,7 +92,7 @@
             <fieldset>
               <legend for="1780493620">{{ _('What would you like to do?') }} <span class="required">*</span></legend>
               <div class="form-group">
-                <p class="help-block">{{ _('Let us know what you are experienced in? If you have a vision and no experience, that is alright, write down what you would like to do and surely we\'ll find a tasks to realize the vision.') }}</p>
+                <p class="help-block">{{ _('Let us know what you are experienced in. If you have a vision and no experience, that is alright, write down what you would like to do and surely we\'ll find tasks to realize the vision.') }}</p>
                 <textarea id="287506974" name="entry.287506974" class="form-control" required></textarea>
               </div>
             </fieldset>
