Improve Job Fair section

--- a/templates/job-fair.html
+++ b/templates/job-fair.html
@@ -22,8 +22,8 @@
 
           <h2>{{ _('Employers') }}</h2>
           <p class="text-justify">
-            {{ _('PyCon SK will be the capital of Python for three days, it will become a place with the highest density of Python programmers per square meter. ') }}
-            {{ _('Besides Slovak professionals, there will be programmers from Hungary or Austria as there is no local PyCon, but also from Czechia, Poland, Germany etc. ') }}
+            {{ _('PyCon SK will be the capital of Python for three days; it will become a place with the highest density of Python programmers per square meter. ') }}
+            {{ _('Besides Slovak professionals, there will be programmers from Hungary or Austria as there is no local PyCon there, but also from Czechia, Poland, Germany etc. ') }}
             {{ _('You can seek for fresh graduates, but also for seasoned programmers who are looking for a change in their careers. ') }}
             {{ _('Present your company and show what it is like to work with you. ') }}
           </p>
