--- a/templates/venue.html
+++ b/templates/venue.html
@@ -42,7 +42,7 @@
         <div class="col-md-12">
 
           <h1>{{ _('How do you get to Slovak PyCon?') }}</h1>
-          <p class="lead">{{ _('<strong>Fourth year</strong> will happen <strong>22-24th March, 2019 in Bratislava</strong>.') }}</p>
+          <p class="lead">{{ _('<strong>Fourth year</strong> will take place from <strong>22 to 24 March 2019 in Bratislava</strong>.') }}</p>
 
           <h2>{{ _('Venue Address') }}</h2>
           <p class="text-justify">
@@ -57,7 +57,7 @@
           <h2>{{ _('Travelling to Bratislava') }}</h2>
           <p class="text-justify">
             {{ _('Bratislava is one of the youngest capitals in Europe, and also one of the smallest. Despite this, it has a rich history of a free royal coronation town of Pressburg and '
-              'multiple opportunities how to spend time there. Bratislava has unique location, it is the only capital int he world located on the border of three countries.'
+              'offers multiple opportunities how to spend time there. Bratislava has a unique location, it is the only capital in the world located on the border of three countries.'
               'Today, Bratislava is a major transport hub in Central Europe, and there are plenty possibilities of getting here.') }}
           </p>
 
@@ -67,11 +67,11 @@
               <h3>{{ _('By air') }}</h3>
               <p class="text-justify">
                 {{ _('If you are travelling to Bratislava, you can fly to the Bratislava airport (airport code: BTS) or the Vienna airport (airport code: VIE). '
-                 'Vienna airport has considerably better offer of flights.') }}
+                 'The Vienna airport has considerably better offer of flights.') }}
               </p>
               <p class="text-justify">
-                {{ _('From Bratislava airport you can take taxi (use the phone, it''s cheaper), or take the bus #61 and then move to bus #39 at the Bajkalska station. '
-                 'Get off the bus at the station ZOO and simply follow the PyCon stickers up to the hill to university campus.') }}
+                {{ _('From Bratislava airport you can take a taxi (use the phone, it\'s cheaper), or take the bus #61 and then change to bus #39 at the Bajkalska station. '
+                 'Get off the bus at the station ZOO and simply follow the PyCon stickers up to the hill to the university campus.') }}
               </p>
               <p class="text-justify">
                 {{ _('If you travel via Vienna airport, there are direct and cheap bus connections from early morning till midnight. One way ticket costs about 8 EUR '
@@ -93,7 +93,7 @@
             After crossing the border follow the direction Praha or Brno according to instructions above.') }}</li>
                 <li>{{ _('If you drive from Prague, take the highway D1 to Brno, once in Brno take the highway D2 heading to Slovakia and Bratislava.
             After arriving to Bratislava follow the highway and leave it at the exit Mlynska dolina after passing the tunnel.
-            Be cautious, the exit is located right after the tunnel, so you should stay in right lane while in tunnel.') }}</li>
+            Be cautious, the exit is located right after the tunnel, so you should stay in the right lane while in tunnel.') }}</li>
                 <li>{{ _('From eastern and southern Poland choose your way to Katowice. From there follow the road to Cadca, Slovakia.
             Follow the road all the way to Zilina, then switch to the highway D1 to Bratislava. After arriving to Bratislava,
             you should pass the river of Danube twice following the direction Praha/Brno, then leave the highway following the instructions above.') }}</li>
@@ -106,7 +106,7 @@
                 {{ _('All neighbouring capital cities Vienna, Prague, Budapest, Warsaw and Kyiv have direct bus connections.') }}
               </p>
               <p class="text-justify">
-                {{ _('Most of the buses will bring you to the main bus station - Mlynske Nivy. It is currently located in temporary location, so don''t
+                {{ _('Most of the buses will bring you to the main bus station - Mlynske Nivy. It is currently located in temporary location, so don\'t
             worry and keep calm if you arrive feeling like on construction site. Leave the area towards the blue oval building VUB
             (next to the building with BMW logo) where you find the station of city bus lines. We recommend you to take bus number
             70 to the end station Most SNP (SNP bridge) and from there continue with line number 30 or 37 to the station ZOO.') }}
@@ -119,8 +119,8 @@
               </p>
               <p class="text-justify">
                 {{ _('Once you arrive at the Bratislava train station (Bratislava hlavná stanica), leave the station through the main entrance.
-            In front of the building, there are bus and tram stops. We recommend zou to take the bus number 32 to the station ZOO.
-            If you plan to use city lines more often, we recommend you to check the website https://imhd.sk/ba/ for more information
+            In front of the building, there are bus and tram stops. We recommend you to take the bus number 32 to the station ZOO.
+            If you plan to use city lines more often, we recommend you to check the website <a href="https://imhd.sk/ba/public-transport" title="IMHD - Bratislava - English" target="_blank" class="external">imhd.sk</a> for more information
             about the prices or the lines.') }}
               </p>
             </div>
