Remove zero-width unicode character from Tickets section

--- a/templates/tickets.html
+++ b/templates/tickets.html
@@ -208,7 +208,7 @@
         <div class="col-md-8">
           <p class="lead">{{ _('<i>Teaching with Hardware</i> is a project of the Slovak Python User Group which strives to
               increase digital literacy and bring joy to computing classes on primary and secondary schools in Slovakia.
-              We do this by using an educational physical computing board called ​ BBC micro:bit. The board can be
+              We do this by using an educational physical computing board called BBC micro:bit. The board can be
               programmed to interact with external devices, such as LED strips, buzzers, motion sensors, temperature
               sensors, and so on. By buying a <i>micro:bit Education Supporter Ticket</i> you provide one school in
               Slovakia with a kit of 20 micro:bits, LED strips, speakers, crocodile cables, robots, servo motors and so
