--- a/templates/speakers.html
+++ b/templates/speakers.html
@@ -207,9 +207,9 @@
                                 </p>
                             </div>
                             <div class="ts-speaker-session">
-                                <h4 class="session-title">{{ _('Using python in new space industry is not a rocket science') }}</h4>
+                                <h4 class="session-title">{{ _('Using Python in new space industry is not a rocket science') }}</h4>
                                 <p>
-                                    {{ _('What we do at Iceye and how python is allowing us to grow fast and be unique.') }}
+                                    {{ _('What we do at Iceye and how Python is allowing us to grow fast and be unique.') }}
                                 </p>
                             </div>
                         </div><!-- Info end -->
