--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -10,78 +10,134 @@
     </div><!-- Subpage title end -->
   </div><!-- Page Banner end -->
 
-  <section id="main-container" class="main-container">
-    <div class="container">
-      <div class="row text-center">
-        <span class="icon-wrap"><i class="fa fa-newspaper-o"></i></span>
-        <h2 class="section-title">{{ _('Schedule') }}</h2>
-        <p class="section-sub-title">{{ _('What\'s on when (more details to be confirmed) ') }}</p>
-      </div><!--/ Title row end -->
-      <div class="row">
-        <div class="col-md-12">
+    <section id="main-container" class="main-container">
+		<div class="container">
+			<div class="row text-center">
+                <span class="icon-wrap"><i class="fa fa-calendar"></i></span>
+                <h2 class="section-title">{{ _('Friday') }}</h2>
+                <p class="section-sub-title">{{ _('Schedule') }}</p>
+			</div><!--/ Title row end -->
 
-          <table class="table table-bordered">
-            <thead>
-            <tr>
-              <th scope="col">{{ _('Friday') }}</th>
-              <th scope="col">{{ _('Saturday') }}</th>
-              <th scope="col">{{ _('Sunday') }}</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-              <td>{{ _('Talks [EN track]') }}</td>
-              <td>{{ _('Talks [both EN and SK]') }}</td>
-              <td>{{ _('Talks [both EN and SK]') }}</td>
-            </tr>
-            <tr>
-              <td>{{ _('Workshops [both EN and SK]') }}</td>
-              <td>{{ _('Workshops [both EN and SK]') }}</td>
-              <td>{{ _('Workshops [both EN and SK]') }}</td>
-            </tr>
-            <tr>
-              <td>{{ _('SPy Cup Presentations [SK] ') }}<span class="badge badge-pill badge-success">{{ _('Edu') }}</span>
-              </td>
-              <td>{{ _('Conference Game Finals [EN] ') }}<span class="badge badge-pill badge-secondary">{{ _('Conference Contest') }}</span>
-              </td>
-              <td>{{ _('Sprints [both EN and SK]') }}</td>
-            </tr>
-            <tr>
-              <td>{{ _('EduSummit Talks [SK] ') }}<span class="badge badge-pill badge-success">{{ _('Edu') }}</span>
-              </td>
-              <td>{{ _('EduSummit Workshops [SK] ') }}<span class="badge badge-pill badge-success">{{ _('Edu') }}</span>
-              </td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>{{ _('Python Cup [SK] ') }}<span class="badge badge-pill badge-success">{{ _('Edu') }}</span></td>
-              <td>{{ _('Young Coders\' day [SK] ') }}<span class="badge badge-pill badge-success">{{ _('Edu') }}</span>
-              </td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>{{ _('EduSummit Poster Session [both EN and SK] ') }}<span class="badge badge-pill badge-success">{{ _('Edu') }}</span>
-              </td>
-              <td>{{ _('Main Poster session [both EN and SK]') }}</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>{{ _('Hardware Projects Showcase [both EN and SK] ') }}<span class="badge badge-pill badge-success">{{ _('Edu') }}</span>
-              </td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>{{ _('Conference Party ') }}<span class="badge badge-pill badge-warning">{{ _('Social Event') }}</span>
-              </td>
-              <td>{{ _('Conference Dinner ') }}<span class="badge badge-pill badge-warning">{{ _('Social Event') }}</span>
-              </td>
-              <td></td>
-            </tr>
-            </tbody>
-          </table>
 
-      </div>
-    </div>
-  </section>
+			<div class="row">
+				<div class="col-md-12">
+					<div class="schedule-tab">
+						<ul class="nav nav-tabs" id="nav-tabs">
+						  	<li class="active">
+						  		<a class="animated fadeIn" href="#tab_one" data-toggle="tab">
+						  			<span class="tab-head">
+										<span class="tab-text-title">Aula Magna</span>
+									</span>
+						  		</a>
+						  	</li>
+						  	<li>
+							  	<a class="animated fadeIn" href="#tab_two" data-toggle="tab">
+							  		<span class="tab-head">
+										<span class="tab-text-title">Aula Minor</span>
+									</span>
+							  	</a>
+							</li>
+						 	<li>
+							  	<a class="animated fadeIn" href="#tab_three" data-toggle="tab">
+							  		<span class="tab-head">
+										<span class="tab-text-title">Babageova A</span>
+									</span>
+							  	</a>
+							</li>
+                            <li>
+							  	<a class="animated fadeIn" href="#tab_four" data-toggle="tab">
+							  		<span class="tab-head">
+										<span class="tab-text-title">Babageova B</span>
+									</span>
+							  	</a>
+							</li>
+						</ul>
+
+						<div class="tab-content">
+					        <div class="tab-pane active animated fadeInRight" id="tab_one">
+				        	<h2 class="schedule-date">Aula Magna -1.61</h2>
+                            {% for block in magna %}
+				        		<div class="schedule-listing">
+				        			<span class="schedule-slot-time">{{ block.time }}</span>
+				        			<div class="schedule-slot-info">
+				        				{% if block.avatar %}
+                                        <a href="#">
+				        					<img class="schedule-slot-speakers" src="{{ block.avatar }}" alt="{{ block.name }}" />
+				        				</a>
+                                        {% endif %}
+                                        <div class="schedule-slot-info-content">
+				        					<h3 class="schedule-slot-title">{{ block.title }}</h3>
+				        					<h4 class="schedule-slot-speaker-name">{{ block.name }}</h4>
+				        				</div><!--Info content end -->
+				        			</div><!-- Slot info end -->
+				        		</div><!-- Slot listing 1 end -->
+                            {% endfor %}
+					        </div><!-- Tab pane 1 end -->
+
+				            <div class="tab-pane animated fadeInRight" id="tab_two">
+				      		<h2 class="schedule-date">Aula Minor -1.60</h2>
+                            {% for block in minor %}
+				        		<div class="schedule-listing">
+				        			<span class="schedule-slot-time">{{ block.time }}</span>
+				        			<div class="schedule-slot-info">
+				        				{% if block.avatar %}
+                                        <a href="#">
+				        					<img class="schedule-slot-speakers" src="{{ block.avatar }}" alt="{{ block.name }}" />
+				        				</a>
+                                        {% endif %}
+                                        <div class="schedule-slot-info-content">
+				        					<h3 class="schedule-slot-title">{{ block.title }}</h3>
+				        					<h4 class="schedule-slot-speaker-name">{{ block.name }}</h4>
+				        				</div><!--Info content end -->
+				        			</div><!-- Slot info end -->
+				        		</div><!-- Slot listing 1 end -->
+                            {% endfor %}
+				            </div><!-- Tab pane 2 end -->
+
+				        	<div class="tab-pane animated fadeInLeft" id="tab_three">
+				            <h2 class="schedule-date">Babbageova učebňa A -1.57a</h2>
+                            {% for block in babageovaA %}
+				        		<div class="schedule-listing">
+				        			<span class="schedule-slot-time">{{ block.time }}</span>
+				        			<div class="schedule-slot-info">
+				        				{% if block.avatar %}
+                                        <a href="#">
+				        					<img class="schedule-slot-speakers" src="{{ block.avatar }}" alt="{{ block.name }}" />
+				        				</a>
+                                        {% endif %}
+                                        <div class="schedule-slot-info-content">
+				        					<h3 class="schedule-slot-title">{{ block.title }}</h3>
+				        					<h4 class="schedule-slot-speaker-name">{{ block.name }}</h4>
+				        				</div><!--Info content end -->
+				        			</div><!-- Slot info end -->
+				        		</div><!-- Slot listing 1 end -->
+                            {% endfor %}
+				        	</div><!-- Tab pane 3 end -->
+
+                            <div class="tab-pane animated fadeInLeft" id="tab_four">
+				            <h2 class="schedule-date">Babbageova učebňa B -1.57b</h2>
+                            {% for block in babageovaB %}
+				        		<div class="schedule-listing">
+				        			<span class="schedule-slot-time">{{ block.time }}</span>
+				        			<div class="schedule-slot-info">
+				        				{% if block.avatar %}
+                                        <a href="#">
+				        					<img class="schedule-slot-speakers" src="{{ block.avatar }}" alt="{{ block.name }}" />
+				        				</a>
+                                        {% endif %}
+                                        <div class="schedule-slot-info-content">
+				        					<h3 class="schedule-slot-title">{{ block.title }}</h3>
+				        					<h4 class="schedule-slot-speaker-name">{{ block.name }}</h4>
+				        				</div><!--Info content end -->
+				        			</div><!-- Slot info end -->
+				        		</div><!-- Slot listing 1 end -->
+                            {% endfor %}
+				        	</div><!-- Tab pane 3 end -->
+
+						</div><!-- tab content -->
+					</div><!-- Schedule tab end -->
+				</div><!-- Col end -->
+			</div><!-- Content row end -->
+		</div><!-- Container end -->
+	</section><!-- Main container end -->
 {% endblock %}
