added coder dojo as workshop and partner

--- a/templates/edusummit.html
+++ b/templates/edusummit.html
@@ -323,8 +323,8 @@
                             </div>
                         </div><!-- Info end -->
                     </div><!-- Col end -->
-                </div><!-- Speaker list 3 end -->
-            </div><!-- Speaker row 3 -->
+                </div><!-- Speaker list 1 end -->
+            </div><!-- Speaker row 1 -->
 
             <div class="row">
                 <div class="ts-speaker-list clearfix">
@@ -353,8 +353,8 @@
                             </div>
                         </div><!-- Info end -->
                     </div><!-- Col end -->
-                </div><!-- Speaker list 3 end -->
-            </div><!-- Speaker row 3 -->
+                </div><!-- Speaker list 2 end -->
+            </div><!-- Speaker row 2 -->
 
             <div class="row">
                 <div class="ts-speaker-list clearfix">
@@ -400,11 +400,39 @@
                             </div>
                         </div><!-- Info end -->
                     </div><!-- Col end -->
-                </div><!-- Speaker list 3 end -->
-            </div><!-- Speaker row 3 -->
+                </div><!-- Speaker list 4 end -->
+            </div><!-- Speaker row 4 -->
+
+            <div class="row">
+                <div class="ts-speaker-list clearfix">
+                    <div class="col-xs-12 col-md-3 col-md-offset-1">
+                        <div class="ts-speaker-image">
+                            <img class="img-responsive"
+                                 src="{{ url_for('static', filename='images/workshops/coderdojo.jpg') }}"
+                                 alt="{{ _('Coder Dojo image') }}"/>
+                        </div><!--Image end -->
+                    </div><!-- Col end -->
+
+                    <div class="col-xs-12 col-md-7">
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name dark">{{ _('CodeDojo') }}</h3>
+                            <div class="ts-speaker-bio text-justify">
+                                <p>
+                                    {{ _('Pozývame všetky deti vyskúšať si programovanie v našom CoderDojo. Príďte si '
+                                         'naprogramovať vlastnú hru v Scratchi, appku v Androide, alebo hardvér – '
+                                         'Arduino. CoderDojo je medzinárodná sieť bezplatných poobedňajších krúžkov '
+                                         'programovania pre deti od 7 do 17 rokov. Ak chcete vašim deťom priblížiť '
+                                         'svet programovania, toto je výborná príležitosť!') }}
+                                </p>
+                                <p><b>{{ _('Lektori: Ernest Walzel a Michal Burger') }}</b></p>
+                            </div>
+                        </div><!-- Info end -->
+                    </div><!-- Col end -->
+                </div><!-- Speaker list 4 end -->
+            </div><!-- Speaker row 4 -->
 
             {% endif %}
-        
+
             <div class="row equal">
                 <div class="col-xs-12 col-sm-6 col-md-6">
                     <div class="sponsor-details">
