--- a/templates/sponsoring.html
+++ b/templates/sponsoring.html
@@ -312,7 +312,23 @@
               </div>
             </div><!-- Info end -->
           </div><!-- Sponsor details -->
-        </div><!-- Col 4 end -->
+        </div><!-- Col 1 end -->
+        <div class="col-xs-12 col-sm-3 col-md-3">
+          <div class="sponsor-details">
+            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/coderdojo.png') }}" alt=""/>
+            <div class="sponsor-info">
+              <h4 class="sponsor-name">Coder Dojo</h4>
+              <p>&nbsp;</p>
+              <div class="sponsor-web-link">
+                <a href="https://bratislava.coderdojo.sk/" target="_blank"><i class="fa fa-globe"></i></a>
+                <a href="https://www.facebook.com/CoderDojoBratislava" target="_blank"><i class="fa fa-facebook"></i></a>
+{#                <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>#}
+{#                <a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>#}
+{#                <a href="https://instagram.com/oxfordbookshop/" target="_blank"><i class="fa fa-instagram"></i></a>#}
+              </div>
+            </div><!-- Info end -->
+          </div><!-- Sponsor details -->
+        </div><!-- Col 2 end -->
       </div>
 
     </div>
