fixed typo and removed obsolete information

--- a/templates/edusummit.html
+++ b/templates/edusummit.html
@@ -415,7 +415,7 @@
 
                     <div class="col-xs-12 col-md-7">
                         <div class="ts-speaker-info">
-                            <h3 class="ts-speaker-name dark">{{ _('CodeDojo') }}</h3>
+                            <h3 class="ts-speaker-name dark">{{ _('CoderDojo') }}</h3>
                             <div class="ts-speaker-bio text-justify">
                                 <p>
                                     {{ _('Pozývame všetky deti vyskúšať si programovanie v našom CoderDojo. Príďte si '
