updated texts for Adam Stevko

--- a/templates/speakers.html
+++ b/templates/speakers.html
@@ -365,18 +365,32 @@
                             </ul>
                             <div class="ts-speaker-bio">
                                 <p>
-                                    {{ _('Adam is currently working as Security Engineer and has already been SRE/System Engineer/DevOps '
-                                         'Engineer for a long time. He is a UNIX Lover, devoted Python user and evangelist. Interested '
-                                         'in operating systems, security, networking and almost anything interesting.') }}
+                                    {{ _('Adam is currently working as Security Engineer and has already been '
+                                         'SRE/System Engineer/DevOps Engineer for a long time. He is a UNIX Lover, '
+                                         'devoted Python user and evangelist. He is interested in operating systems, '
+                                         'security, networking and almost anything that catches his attention.') }}
                                 </p>
                             </div>
                             <div class="ts-speaker-session">
                                 <h4 class="session-title">{{ _('Be a good colleague and help your Security Engineer!') }}</h4>
                                 <p>
-                                    {{ _('Security is a shared responsibility. In this talk, I will show you how software engineers '
-                                         'can leverage static code analysis for locating most common security vulnerabilities and '
-                                         'integrate these checks into their CI systems. Following these guidelines, you will make '
-                                         'your Security Engineers happy and your code more secure.') }}
+                                    {{ _('2018 was the year of GDPR.  Security is a shared responsibility and has '
+                                         'become even more important than ever before. Nevertheless, not everybody '
+                                         'realizes this and security incidents and problems continue to occur, thus '
+                                         'resulting in catastrophical consequences for your business. In this talk, '
+                                         'I will be sharing how one can utilize best practices to deliver less '
+                                         'vulnerable code by using tools to prevent ]security holes, how to handle '
+                                         'incidents from the developers’ point of view and how you can assist your '
+                                         'Security Engineers. By following these guidelines, you will make your '
+                                         'Security Engineers happy and your code more secure.') }}
+                                </p>
+                                <p>
+                                    {{ _('GDPR came into effect in 2018 and security become even more important. '
+                                         'What’s more, it became a shared responsibility and not everybody realizes '
+                                         'this. Security incidents and problems continue to happen and I would like '
+                                         'to share my experiences as a Security Engineer working closely with '
+                                         'developers how to tackle the cooperation with developers and what tools and '
+                                         'techniques one can use to spot security problems before they will be misused.') }}
                                 </p>
                             </div>
                         </div><!-- Info end -->
