--- a/templates/sponsoring.html
+++ b/templates/sponsoring.html
@@ -315,7 +315,7 @@
         </div><!-- Col 1 end -->
         <div class="col-xs-12 col-sm-3 col-md-3">
           <div class="sponsor-details">
-            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/coderdojo.png') }}" alt=""/>
+            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/coderdojo.svg') }}" alt=""/>
             <div class="sponsor-info">
               <h4 class="sponsor-name">Coder Dojo</h4>
               <p>&nbsp;</p>
