fixed typos in Adam Stevko's talk

--- a/templates/speakers.html
+++ b/templates/speakers.html
@@ -390,16 +390,16 @@
                                          'security, networking and almost anything that catches his attention.') }}
                                 </p>
                             </div>
-                            <a name="session_stevko"></a
+                            <a name="session_stevko"></a>
                             <div class="ts-speaker-session">
                                 <h4 class="session-title">{{ _('Be a good colleague and help your Security Engineer!') }}</h4>
                                 <p>
-                                    {{ _('2018 was the year of GDPR.  Security is a shared responsibility and has '
+                                    {{ _('2018 was the year of GDPR. Security is a shared responsibility and has '
                                          'become even more important than ever before. Nevertheless, not everybody '
                                          'realizes this and security incidents and problems continue to occur, thus '
                                          'resulting in catastrophical consequences for your business. In this talk, '
                                          'I will be sharing how one can utilize best practices to deliver less '
-                                         'vulnerable code by using tools to prevent ]security holes, how to handle '
+                                         'vulnerable code by using tools to prevent security holes, how to handle '
                                          'incidents from the developers’ point of view and how you can assist your '
                                          'Security Engineers. By following these guidelines, you will make your '
                                          'Security Engineers happy and your code more secure.') }}
@@ -1787,7 +1787,7 @@
                                          'to be a software engineer.') }}
                                 </p>
                             </div>
-                            <a name="speaker_bellayova_kupcova"></a>
+                            <a name="session_bellayova_kupcova"></a>
                             <div class="ts-speaker-session">
                                 <h4 class="session-title">{{ _('Programovať môže každý. Fakt alebo mýtus?') }}</h4>
                                 <p> {{ _('Čo keby ste mali riešenie na oživenie vyučovania programovania? Riešenie, '
